#[build]

# Pi 0/1
# [target.arm-unknown-linux-gnueabihf]
# linker = "arm-linux-gnueabihf-gcc"

# Pi 2/3/4
#[target.armv7-unknown-linux-gnueabihf]
#linker = "arm-none-linux-gnueabihf-gcc"

[package]
name = "mqtt2influxdb"
version = "0.1.0"
authors = ["Javier Ernesto Matarrese <jmatarrese@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.1.1", features = ["rt"] }
rumqttc = "0.5.0"
influx_db_client = { version="0.5.0"}
url = "2.2.0"
openssl = { version = "0.10.32", features = ["vendored"] }
confy = "0.4.0"
serde = "1.0.123"
